--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success:
   - docker build -t delacannon/multi-nginx ./nginx
   - docker build -t delacannon/multi-server ./server 
   - docker build -t delacannon/multi-worker ./worker
-  # Log in to docker CLI
+  # Log in to docker CLIENT
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" -- password-stdin
   # Takke those images and push the to docker hub
   - docker push delacannon/multi-client
