--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker build -t delacannon/multi-server ./server 
   - docker build -t delacannon/multi-worker ./worker
   # Log in to docker CLIENT
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" -- password-stdin
+  - echo -p "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" -- password-stdin
   # Takke those images and push the to docker hub
   - docker push delacannon/multi-client
   - docker push delacannon/multi-nginx
